Less heap for r8.